frontend/test/should_fail/inh_attrib_model_005.gm
// A redeclaration of a directly inherited edge attribute should be rejected

node class Type1 {
}

node class Type2 extends Type1 {
	a : int;
}

node class Type3 extends Type2 {
	a: int;
}


